k8s-manifests/overlays/uat/superapp/client/orchestrator/patch/route-patch.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: client-orchestrator-route
spec:
  path: /api/v1/cbesuperapp/client_orchestrator
  to:
    name: client-orchestrator-uat
    weight: 100
    kind: Service
  host: uatapisuperapp.cbe.com.et
  port:
    targetPort: 8080
